# satsim

./: README.md  pyproject.toml
src/satsim/: __init__.py  cli_entry.py  protocols.py  types.py
src/satsim/dynamics/: forces.py  propagator.py
src/satsim/environment/: earth.py
src/satsim/spacecraft/: __init__.py
