[project]
name = "satsim"
version = "0.1.0"
description = ""
readme = "README.md"
# using 3.13 as fprime does not work with 3.14+ (yet) so maintain compat
requires-python = ">=3.13"
dependencies = [
    "astropy>=6",
    "numpy>=2",
]

[project.scripts]
satsim = "satsim:main"

[build-system]
requires = ["uv_build>=0.9.25,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9",
    "ruff>=0.15",
    "ty>=0.0",
]
